[gd_scene load_steps=7 format=3 uid="uid://b27vd0057ygql"]

[ext_resource type="Script" uid="uid://3aebmyokkf03" path="res://Scenes/TestScenes/ray_test.gd" id="2_2ivv3"]
[ext_resource type="Texture2D" uid="uid://13fn0dfbgkt5" path="res://icon.svg" id="2_16f11"]
[ext_resource type="PackedScene" uid="uid://dkabndrqqw4l6" path="res://Scenes/Entities/Enemies/base_enemy.tscn" id="3_fipqr"]
[ext_resource type="Script" uid="uid://dysoglmxvh54q" path="res://Scripts/UI/pause_menu.gd" id="4_17egt"]
[ext_resource type="PackedScene" uid="uid://c8shnce8qcjg1" path="res://Scenes/Entities/Characters/modular_player.tscn" id="5_fipqr"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_16f11"]

[node name="TestRay" type="Node2D"]

[node name="floor" type="StaticBody2D" parent="."]
script = ExtResource("2_2ivv3")

[node name="Parallax2D" type="Parallax2D" parent="floor"]
repeat_size = Vector2(128, 0)
repeat_times = 11

[node name="Sprite2D" type="Sprite2D" parent="floor/Parallax2D"]
position = Vector2(576, 636)
texture = ExtResource("2_16f11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(576, 574)
shape = SubResource("WorldBoundaryShape2D_16f11")

[node name="enemy" parent="floor" instance=ExtResource("3_fipqr")]
position = Vector2(960, 512)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pause_menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -213.0
offset_right = 144.5
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("4_17egt")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/pause_menu"]
layout_mode = 0
offset_right = 294.0
offset_bottom = 432.0
color = Color(0.894183, 0.304131, 0.999999, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/pause_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -103.5
offset_right = 96.5
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2

[node name="Back  to game" type="Button" parent="CanvasLayer/pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back to game"

[node name="Settings" type="Button" parent="CanvasLayer/pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="Exit" type="Button" parent="CanvasLayer/pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[node name="ModularPlayer" parent="." instance=ExtResource("5_fipqr")]
position = Vector2(704, 384)

[node name="Camera2D" type="Camera2D" parent="ModularPlayer"]

[connection signal="pressed" from="CanvasLayer/pause_menu/VBoxContainer/Back  to game" to="CanvasLayer/pause_menu" method="_on_back_to_game_pressed"]
[connection signal="pressed" from="CanvasLayer/pause_menu/VBoxContainer/Exit" to="CanvasLayer/pause_menu" method="_on_exit_pressed"]
